# cpp-project-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/another_module/: Another.cpp  Another.h
src/formula/: Formula.cpp
test/: CMakeLists.txt  main.cpp
test/another_module/: Another_test.cpp
test/formula/: Formula_test.cpp
